# microhop

./: .gitignore  Cargo.toml  Makefile  README.md  bumpver.toml  rustfmt.toml
.github/workflows/: ci-clippy.yml  generic_workflow.yml  insanity_check.yml
etc/: microhop.conf
microgen/: Cargo.toml
microgen/src/: analyser.rs  clidef.rs  main.rs  microhop  rdgen.rs  rdpack.rs
profile/: Cargo.toml
profile/src/: cfg.rs  lib.rs
src/: conf.rs  kmodprobe.rs  logger.rs  main.rs  microhop.rs
src/rfsutils/: blk.rs  fs.rs  kmodprobe.rs  mod.rs
syslib/: Cargo.toml
syslib/src/: blk.rs  fs.rs  lib.rs
