[package]
name = "microhop"
version = "0.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
colored = "2.1.0"
indexmap = { version = "2.2.6", features = [
    "arbitrary",
    "borsh",
    "quickcheck",
    "rayon",
    "rustc-rayon",
    "serde",
] }
kmoddep = "0.1.2"
log = "0.4.21"
nix = { version = "0.28.0", features = [
    "kmod",
    "default",
    "mount",
    "hostname",
    "fs",
    "feature",
    "env",
    "dir",
    "aio",
    "acct",
    "inotify",
    "user",
    "zerocopy",
    "uio",
    "event",
    "fanotify",
    "ioctl",
    "mman",
    "mqueue",
    "net",
    "personality",
    "poll",
    "process",
    "pthread",
    "ptrace",
    "quota",
    "reboot",
    "resource",
    "sched",
    "socket",
    "term",
    "ucontext",
    "time",
] }
serde = { version = "1.0.198", features = ["derive"] }
serde_yaml = "0.9.34"
sys-mount = "3.0.1"
uname = "0.1.1"
walkdir = "2.5.0"
zstd = "0.13.1"
profile = { path = "profile" }
libblkid-rs = "0.3.2"
uuid = "1.8.0"
lazy_static = { version = "1.4.0", features = ["spin"] }


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[workspace]
members = [".", "profile", "microgen"]
