[package]
name = "microhop"
version = "0.0.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
log = "0.4.21"
nix = { version = "0.28.0", features = [
    "kmod",
    "default",
    "mount",
    "hostname",
    "fs",
    "feature",
    "env",
    "dir",
    "aio",
    "acct",
    "inotify",
    "user",
    "zerocopy",
    "uio",
    "event",
    "fanotify",
    "ioctl",
    "mman",
    "mqueue",
    "net",
    "personality",
    "poll",
    "process",
    "pthread",
    "ptrace",
    "quota",
    "reboot",
    "resource",
    "sched",
    "socket",
    "term",
    "ucontext",
    "time",
] }
uname = "0.1.1"
walkdir = "2.5.0"
zstd = "0.13.1"
profile = { path = "profile" }
syslib = { path = "syslib" }
uuid = "1.8.0"
lazy_static = { version = "1.4.0", features = ["spin"] }


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[workspace]
members = [".", "profile", "microgen", "syslib"]
