[package]
name = "profile"
version = "0.0.9"
edition = "2021"

[dependencies]
indexmap = { version = "2.2.6", features = [
    "arbitrary",
    "borsh",
    "quickcheck",
    "rayon",
    "rustc-rayon",
    "serde",
] }
log = "0.4.21"
serde = { version = "1.0.199", features = ["derive"] }
serde_yaml = "0.9.34"
