[package]
name = "syslib"
version = "0.0.9"
edition = "2021"

[dependencies]
libblkid-rs = "0.3.2"
log = "0.4.21"
nix = { version = "0.28.0", features = [
    "kmod",
    "default",
    "mount",
    "hostname",
    "fs",
    "feature",
    "env",
    "dir",
    "aio",
    "acct",
    "inotify",
    "user",
    "zerocopy",
    "uio",
    "event",
    "fanotify",
    "ioctl",
    "mman",
    "mqueue",
    "net",
    "personality",
    "poll",
    "process",
    "pthread",
    "ptrace",
    "quota",
    "reboot",
    "resource",
    "sched",
    "socket",
    "term",
    "ucontext",
    "time",
] }
walkdir = "2.5.0"
